@startuml

BeverageCalculatorGUI -- BeverageCalculator
BeverageCalculator -- BeverageSelection
Beverage --o BeverageSelection
Beverage <|-- Coffee
Beverage <|-- BlackTea
Beverage <|-- GreenTea
Beverage <|-- AddOn
AddOn o-- Beverage
AddOn <|-- Honey
AddOn <|-- Ice
AddOn <|-- Chocolate
AddOn <|-- Milk

class BeverageCalculatorGUI {
    +initComponents()
    +addTaskPerformer(ActionListener)
    +getBeverage() : String
    +honey() : boolean
    +ice() : boolean
    +chocolate() : boolean
    +milk() : boolean
    +displayTotal(double)
    +displayDescription(String)
}

class BeverageCalculator {
    -gui : BeverageCalculatorGUI
    -beverage : BeverageSelection
    +actionPerformed(ActionEvent)
    +updateGUI()
}

class BeverageSelection {
    -drink : Beverage
    -total : double
    +getDrink() : Beverage
    +getTotal() : double
    +setDrink(Beverage)
}

class Beverage <<interface>> {
    +getName() : String
    +getPrice() : double
}

abstract class AddOn {
    #beverage : Beverage
}

@enduml